--- a/R/BRIDGE/DESCRIPTION
+++ b/R/BRIDGE/DESCRIPTION
@@ -19,6 +19,7 @@ Depends: R (>= 4.0.0)
 Imports: shiny,
     shinydashboard,
     shinyWidgets,
+    htmltools,
     DT,
     ComplexHeatmap,
     InteractiveComplexHeatmap,
