--- a/R/BRIDGE/DESCRIPTION
+++ b/R/BRIDGE/DESCRIPTION
@@ -32,8 +32,7 @@ Imports: shiny,
     future,
     promises,
     SummarizedExperiment,
-    S4Vectors,
-    clusterProfiler,
+    S4Vectors,    
     reactome.db,
     org.Dr.eg.db,
     org.Hs.eg.db,
@@ -48,6 +47,7 @@ Imports: shiny,
     msigdbr
 Remotes:
     mildpiggy/DEP2,
-    YuLab-SMU/clusterProfiler
+    YuLab-SMU/clusterProfiler,
+    YuLab-SMU/clusterProfiler.dplyr
 Suggests: testthat
 RoxygenNote: 7.3.2
