volcano fix + raw heatmap module

--- a/R/BRIDGE/NAMESPACE
+++ b/R/BRIDGE/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(DepHeamtapServer)
 export(DepHeatmapUI)
+export(RawHeatmapServer)
+export(RawheatmapUI)
 export(VolcanoUI)
 export(connect_db)
 export(cpm_normalization)
@@ -28,8 +30,6 @@ export(pca_server)
 export(pca_ui)
 export(plot_custom_tc_cluster)
 export(processed_integration)
-export(raw_heatmap_server)
-export(raw_heatmap_ui)
 export(raw_integration)
 export(server_function)
 export(timeline_gene_search)
