--- a/R/BRIDGE/NAMESPACE
+++ b/R/BRIDGE/NAMESPACE
@@ -2,8 +2,15 @@
 
 export(DepHeamtapServer)
 export(DepHeatmapUI)
+export(EnrichmentPlotsUI)
+export(EnrichmentServer)
+export(EnrichmentSettingsUI)
 export(RawHeatmapServer)
 export(RawheatmapUI)
+export(TimelineGeneSearchUI)
+export(TimelinePlotUI)
+export(TimelineServer)
+export(TimelineTableUI)
 export(VolcanoUI)
 export(connect_db)
 export(cpm_normalization)
@@ -13,9 +20,6 @@ export(data_ui_object)
 export(dep2_phosphoproteomics)
 export(dep2_proteomics)
 export(dep2_rnaseq)
-export(enrichment_plots_ui)
-export(enrichment_server)
-export(enrichment_settings_ui)
 export(fpkm_normalization)
 export(heatmap_server)
 export(heatmap_ui)
@@ -26,16 +30,12 @@ export(integration_ui)
 export(list_tables)
 export(log2_transform)
 export(median_normalization)
-export(pca_server)
-export(pca_ui)
+export(pcaServer)
+export(pcaUI)
 export(plot_custom_tc_cluster)
 export(processed_integration)
 export(raw_integration)
 export(server_function)
-export(timeline_gene_search)
-export(timeline_plot)
-export(timeline_server)
-export(timeline_table)
 export(tmm_normalization)
 export(total_intensity_normalization)
 export(tpm_normalization)
