--- a/R/BRIDGE/NAMESPACE
+++ b/R/BRIDGE/NAMESPACE
@@ -6,7 +6,7 @@ export(EnrichmentPlotsUI)
 export(EnrichmentServer)
 export(EnrichmentSettingsUI)
 export(RawHeatmapServer)
-export(RawheatmapUI)
+export(RawHeatmapUI)
 export(TimelineGeneSearchUI)
 export(TimelinePlotUI)
 export(TimelineServer)
