--- a/R/BRIDGE/NAMESPACE
+++ b/R/BRIDGE/NAMESPACE
@@ -28,6 +28,7 @@ export(integration_ui)
 export(list_tables)
 export(log2_transform)
 export(median_normalization)
+export(mixedrank)
 export(pcaServer)
 export(pcaUI)
 export(plot_custom_tc_cluster)
